--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swiper": "^8.4.4"
+    "path": "0.12.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-input-slider": "6.0.1",
+    "swiper": "8.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
