refactor player component

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-
+db.json
+json-server.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
