--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-slider": "6.0.1",
+    "react-router-dom": "^6.4.3",
     "swiper": "8.4.4"
   },
   "devDependencies": {
