fix search form

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-db.json
-json-server.json
+*.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
