--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
     "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-slider": "6.0.1",
     "react-router-dom": "^6.4.3",
-    "swiper": "8.4.4"
+    "swiper": "8.4.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "@types/react": "18.0.22",
+    "@types/react-dom": "18.0.7",
+    "@vitejs/plugin-react": "2.2.0",
+    "typescript": "4.6.4",
+    "vite": "3.2.0"
   }
 }
