--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.39.5",
     "react-input-slider": "6.0.1",
     "react-router-dom": "^6.4.3",
     "swiper": "8.4.4",
-    "swr": "^1.3.0"
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@types/react": "18.0.22",
