--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@badrap/bar-of-progress": "^0.2.2",
-    "dexie": "^3.2.2",
+    "@badrap/bar-of-progress": "0.2.2",
+    "dexie": "3.2.2",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
     "react-input-slider": "6.0.1",
     "react-router-dom": "^6.4.3",
     "swiper": "8.4.4",
